# incident-response-adk

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
k8s/: deployment.yaml  kustomization.yaml
src/incident_response/: __init__.py  api.py  config.py  main.py  models.py  streaming.py
src/incident_response/agents/: __init__.py  base.py  config_auditor.py  enricher.py  log_analyzer.py  metrics_checker.py  remediator.py  responder.py  triage.py  verifier.py
src/incident_response/mock_data/: __init__.py  alerts.py  infrastructure.py
src/incident_response/tools/: __init__.py  health_checks.py  infrastructure.py  runbooks.py
src/incident_response/workflow/: __init__.py  escalation_loop.py  parallel_diagnostics.py  pipeline.py  sequential_triage.py  state.py
tests/: conftest.py  test_api.py  test_workflow.py
